--- a/fett.css
+++ b/fett.css
@@ -2,6 +2,6 @@ h1 {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif ;
     color: yellowgreen;
 }
-background {
+body {
     background-color: black;
 }
